2010-05-06 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2.5

	* src/repquota.c : Allow -p and -d to be used together.  Also if a uid
	derived from -d scanning cannot be mapped to a username, substitute
	the directory name in square brackets [ideas from Chris Morrone]

2010-05-06 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2.4

	* src/getquota.[ch], repquota.c, man/repquota.8.in :  Map uid's to
	names [chaos bz 963] and add new options:
	- -n report uid's instead of user names
	- -h report human-readable space units

	* src/quota.c : If file system has the 'nolimit' flag, don't
	query it unless -v (verbose) mode is specified.

	* src/getconf.[ch], etc/quota.conf, man/quota.conf.5.in :
	Add optional :nolimit flag to config.

2009-12-14 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2.3

	* src/quota.c : Stop redirecting stderr to stdout as this
	confuses Livermore login scripts.

2009-10-27 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2.2

	* man/Makefile.in, man/Makefile.am, etc/Makefile.in :
	Add missing Makefiles.

	* src/getquota_lustre.c : Define QUOTABLOCK_SIZE if undefined.
	This was exported via liblustreapi.h in lustre-1.6, not in lustre-1.8.

	* rquota.spec : Fix install path for repquota.8

2009-10-23 Jim Garlick <garlick@llnl.gov>

	* man/repquota.8.in : Fix some troff formatting.

2008-12-23 Jim Garlick <garlick@llnl.gov>

	* man : Move man pages from src directory.

	* man/*.in : Standardize man page headers.  Move repquota to section 8.

2008-11-03 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2.1

	* rquota.spec : Build with lustre on SLES.

2008-10-20 Jim Garlick <garlick@llnl.gov>

	* src/listint.c : Properly handle descending numerical ranges.

2008-10-20 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2

	* configure.ac : Force 64-bit on biarch ppc64 configurations.
	This is needed because Lustre libs are 64-bit only in this environment.

	* src/repquota.c : Fix casting problem that broke repquota -u on ppc64.

2008-10-19 Jim Garlick <garlick@llnl.gov>
