@@ -1,9 +1,5 @@
-##
-# $Id: META 186 2009-12-14 18:58:09Z garlick $
-##
-# Metadata for RPM/TAR makefile targets
-##
-  Meta:         1
-  Name:         rquota
-  Version:      2.2.5
-  Date:		2010-05-06
+Meta:         1
+Name:         rquota
+Version:      2.2.6
+Release:      1
+Date:         2010-12-08
